dark mode bug fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,10 @@
 @import 'tailwindcss';
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
 }
 
 @theme inline {
-  --color-background: var(--background);
+  --color-background: #04070d;
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
